# game_nca

./: .gitignore  EXPERIMENTS.md  README.md  pyproject.toml
configs/: catch.yaml  flow.yaml  maze.yaml  maze_21.yaml  pong.yaml
nca_game/: __init__.py  device.py  evaluate.py  evaluate_maze.py  flow.py  games.py  maze.py  nca.py  readout.py  render.py  render_flow.py  render_maze.py  train.py  train_flow.py  train_maze.py  viz.py
